change terms and conditions

--- a/httpdocs/partials/terms-general.phtml
+++ b/httpdocs/partials/terms-general.phtml
@@ -25,8 +25,7 @@
                     <li>Products shall be deemed to include digital work, such as videos, music, software, applications or graphics, etc.</li>
                     <li>Visitors to the Network (hereinafter called "Consumers") can view, listen to, use or download the products etc., while the Makers can stipulate what scope will be accorded to the Users.</li>
                     <li>Instead of being loaded on to the Network or stored at opendesktop.org, the Products will only be inserted from an outside source by the Makers themselves.</li>
-                    <li>Consumers are free to choose whether they wish to make a donation to the Maker if a Product appeals to them. It is also possible to enjoy a Product without making a donation. The Consumer himself/herself can decide how much he/she wishes to donate, and payment is processed by the PayPal money transfer service. The Consumer’s remittance is paid directly to the Maker; opendesktop.org has no influence on the transaction.</li>
-                    <li>Placing Products on the Network or using the Products is restricted to registered Users, and the same applies to making donations.</li>
+                    <li>Placing Products on the Network is restricted to registered Users.</li>
                 </ol></div>
         </div>
         <!-- /.term -->
@@ -67,7 +66,6 @@
             <h3 class="lightblue">5. Consumers’ Obligations</h3>
             <br>
             <div class="term-description"><ol>
-                    <li>Should a Consumer decide to make a donation to a Maker, this is binding. It is not possible to contractually cancel or reverse a donation once it has been paid. Consumers should also be aware that a donation is not earmarked for a specific purpose and the Maker is free to dispose of it as he/she wishes.</li>
                     <li>Consumers acknowledge that the Products are not connected to opendesktop.org in any way and the latter is accordingly unable to accept any liability for the Products. The Makers themselves are responsible for the respective Products.</li>
                 </ol></div>
         </div>
@@ -78,7 +76,6 @@
             <br>
             <div class="term-description"><ol>
                     <li>Registration on opendesktop.org is free.</li>
-                    <li>opendesktop.org does not charge a fee for donation transactions.</li>
                 </ol></div>
         </div>
         <div class="term"><br>
@@ -113,26 +110,15 @@
                 </ol></div>
         </div>
         <!-- /.term -->
-        <p>&nbsp;</p>
-        <div class="term"><br>
-            <h3 class="lightblue">10. Donation Button</h3>
-            <br>
-            <div class="term-description"><ol>
-                    <li>opendesktop.org offers Makers the option of incorporating a donation button on their own websites via iframe. This enables Makers to appeal to Consumers for support for a Product on their own website, which dispenses with the need to visit opendesktop.org’s Network.</li>
-                    <li>opendesktop.org accepts no responsibility for incorporating the buttons. Makers adopt the Codes provided by opendesktop.org entirely on their own responsibility. Liability claims are ruled out.</li>
-                    <li>It is prohibited to change the Code provided by opendesktop.org for the button.</li>
-                </ol></div>
-        </div>
-        <!-- /.term -->
+       
         <p>&nbsp;</p>
         <div class="term"><br>
             <h3 class="lightblue">11. Data Protection</h3>
             <br>
             <div class="term-description"><ol>
                     <li>opendesktop.org processes the personal particulars of its Users for specific purposes in accordance with the statutory provisions. The personal data (name, email address, address, account data etc.) required for registration for membership are used by opendesktop.org to conclude and comply with the Utilisation Agreement. These data are treated as confidential and will not be forwarded to any third parties who are not involved in the contractual or payment process. Users have the right to ask for details of the personal particulars opendesktop.org has saved in their case. This information will be provided free of charge. Users are also entitled to have any incorrect particulars rectified or all their personal data blocked or deleted, on request, unless this contravenes any statutory obligation to safeguard business records.</li>
-                    <li>opendesktop.org outsources its accounting to external services. Proper care will be taken to safeguard all confidential matters pertaining to the Users in accordance with the statutory regulations. The data will not be passed on to any other third parties. Users consent to opendesktop.org requesting, recording, processing, forwarding and using the relevant personal particulars required for the donation to facilitate a fast, straightforward payment.</li>
+                    <li>opendesktop.org outsources its accounting to external services. Proper care will be taken to safeguard all confidential matters pertaining to the Users in accordance with the statutory regulations. The data will not be passed on to any other third parties. </li>
                     <li>Please refer to the data security information <a href="../../../../content/privacy">www.opendesktop.org/privacy</a>, which forms part of these General Terms and Conditions, for further details regarding the handling of data and means of contact.</li>
-                    <li>opendesktop.org employs the services of PayPal for processing all monetary transactions. opendesktop.org has no influence on the data collected by PayPal.</li>
                 </ol></div>
         </div>
         <!-- /.term -->
