changelogs: do not update changelog date if a changelog entry is edited retroactively

--- a/application/modules/default/views/scripts/product/partials/productUpdatesV1.phtml
+++ b/application/modules/default/views/scripts/product/partials/productUpdatesV1.phtml
@@ -21,7 +21,7 @@
  **/
 
 $helperHumanTiming = new Default_View_Helper_HumanTiming();
-$date = $helperHumanTiming->humanTiming($this->productUpdate['changed_at']);
+$date = $helperHumanTiming->humanTiming($this->productUpdate['created_at']);
 $helpBBCode = new Default_View_Helper_Bbcode2html();
 ?>
 <a name="anker_<?= $this->productUpdate['project_update_id'] ?>"></a>
