--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -303,12 +303,16 @@
                                             + '<option value=\"\"></option>'
                                             + '<option value=\"2\">Android (APK)</option>'
                                             + '<option value=\"1\">AppImage</option>'
+                                            + '<option value=\"9\">Arch</option>'
                                             + '<option value=\"5\">Debian</option>'
                                             + '<option value=\"8\">Electron-Webapp</option>'
                                             + '<option value=\"7\">Flatpak</option>'
+                                            + '<option value=\"10\">open/Suse</option>'
                                             + '<option value=\"3\">OS X compatible</option>'
+                                            + '<option value=\"11\">Redhat</option>'
                                             + '<option value=\"6\">Snappy</option>'
-                                            + '<option value=\"4\">Windows executable</option>'                                            + '</select><span id="file-tag-packagetype'+this.id+'">'
+                                            + '<option value=\"4\">Windows executable</option>'                                           
+                                            + '</select><span id="file-tag-packagetype'+this.id+'">'
                                             + '</td>'
                                             + '<td>'
                                             + '<select id="data-select-license' + this.id + '" data-license-id=" name="license">'
@@ -473,12 +477,16 @@
                                                 + '<option value=\"\"></option>'
                                                 + '<option value=\"2\">Android (APK)</option>'
                                                 + '<option value=\"1\">AppImage</option>'
+                                                + '<option value=\"9\">Arch</option>'
                                                 + '<option value=\"5\">Debian</option>'
                                                 + '<option value=\"8\">Electron-Webapp</option>'
                                                 + '<option value=\"7\">Flatpak</option>'
+                                                + '<option value=\"10\">open/Suse</option>'
                                                 + '<option value=\"3\">OS X compatible</option>'
+                                                + '<option value=\"11\">Redhat</option>'
                                                 + '<option value=\"6\">Snappy</option>'
-                                                + '<option value=\"4\">Windows executable</option>'                                                 + '</select><span id="file-tag-packagetype'+this.id+'">'
+                                                + '<option value=\"4\">Windows executable</option>'                                                
+                                                + '</select><span id="file-tag-packagetype'+this.id+'">'
                                                 + '</td>'
 	                                        + '<td>'
 	                                        + '<select id="data-select-license' + this.id + '" data-license-id=" name="license">'
