--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -723,10 +723,13 @@ $this->inlineScript()->appendScript(
                             + '<option value=\"\"></option>'
                             + '<option value=\"2\">Android (APK)</option>'
                             + '<option value=\"1\">AppImage</option>'
+                            + '<option value=\"9\">Arch</option>'
                             + '<option value=\"5\">Debian</option>'
                             + '<option value=\"8\">Electron-Webapp</option>'
                             + '<option value=\"7\">Flatpak</option>'
+                            + '<option value=\"10\">open/Suse</option>'
                             + '<option value=\"3\">OS X compatible</option>'
+                            + '<option value=\"11\">Redhat</option>'
                             + '<option value=\"6\">Snappy</option>'
                             + '<option value=\"4\">Windows executable</option>'
                             + '</select>'
@@ -1023,10 +1026,13 @@ $this->inlineScript()->appendScript(
                         + '<option value=\"\"></option>'
                         + '<option value=\"2\">Android (APK)</option>'
                         + '<option value=\"1\">AppImage</option>'
+                        + '<option value=\"9\">Arch</option>'
                         + '<option value=\"5\">Debian</option>'
                         + '<option value=\"8\">Electron-Webapp</option>'
                         + '<option value=\"7\">Flatpak</option>'
+                        + '<option value=\"10\">open/Suse</option>'
                         + '<option value=\"3\">OS X compatible</option>'
+                        + '<option value=\"11\">Redhat</option>'
                         + '<option value=\"6\">Snappy</option>'
                         + '<option value=\"4\">Windows executable</option>'
                         + '</select>'
