--- a/application/modules/backend/views/scripts/user/index.phtml
+++ b/application/modules/backend/views/scripts/user/index.phtml
@@ -28,6 +28,7 @@
 </div>
 <div class="filtering">
     <form>
+        Member Id: <input type="text" name="filter_member_id" id="filter_member_id"/>
         First Name: <input type="text" name="filter_firstname" id="filter_firstname"/>
         Last Name: <input type="text" name="filter_lastname" id="filter_lastname"/>
         Username: <input type="text" name="filter_username" id="filter_username"/>
@@ -56,7 +57,7 @@
                     key: true,
                     create: false,
                     edit: false,
-                    list: false
+                    list: true
                 },
                 uuid: {
                     title: 'UUID',
@@ -268,6 +269,7 @@
         $('#LoadRecordsButton').click(function (e) {
             e.preventDefault();
             $('#TableContainer').jtable('load', {
+                filter_member_id: $('#filter_member_id').val(),
                 filter_firstname: $('#filter_firstname').val(),
                 filter_lastname: $('#filter_lastname').val(),
                 filter_username: $('#filter_username').val(),
@@ -279,6 +281,7 @@
         $('#RemoveFilterButton').click(function (e) {
             e.preventDefault();
             $('#TableContainer').jtable('load', {
+                filter_member_id: null,
                 filter_firstname: null,
                 filter_lastname: null,
                 filter_username: null,
