backend: add filter member_id

--- a/application/modules/backend/views/scripts/user/index.phtml
+++ b/application/modules/backend/views/scripts/user/index.phtml
@@ -54,6 +54,7 @@
             },
             fields: {
                 member_id: {
+                    title: 'MemberId',
                     key: true,
                     create: false,
                     edit: false,
